--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@sira-ui/tailwind": "^0.11.8",
+    "daisyui": "^4.11.1",
     "postcss": "^8",
+    "rippleui": "^1.12.1",
     "tailwindcss": "^3.4.1"
   }
 }
