--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@sira-ui/tailwind": "^0.11.8",
+    "@sira-ui/tailwind": "^0.9.1",
     "daisyui": "^4.11.1",
     "postcss": "^8",
     "rippleui": "^1.12.1",
