--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "trace": "^3.1.1"
   },
   "devDependencies": {
     "@sira-ui/tailwind": "^0.9.1",
+    "@types/bcrypt": "^5.0.2",
     "daisyui": "^4.11.1",
     "postcss": "^8",
     "rippleui": "^1.12.1",
